[tool.poetry]
name = "capture_tool_for_kalibr_single_webcam"
version = "0.1.0"
description = ""
authors = ["yuki-inaho <yoshikawa@inaho.co>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "7.1.2"
toml = "0.10.1"
numpy = "1.16.0"
opencv-python = "4.2.0.32"
cvui = "2.7b1"
pathlib = "1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
